tests/negative/neg_pr118_removed_natural.safe
package neg_pr118_removed_natural

   x : natural = 0;

